# solana-airdrop-utils

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
tests/: integration_test.rs
