[package]
name = "solana-airdrop-utils"
version = "0.1.0"
edition = "2024"
description = "Solana链上Lamports空投工具包"
license = "MIT"
repository = "https://github.com/qiaopengjun5162/solana-airdrop-utils"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["default"] }
solana-client = "2.2.7"
solana-faucet = "2.2.7"
solana-keypair = "2.2.1"
solana-sdk = "2.2.2"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["time", "rt-multi-thread"] }
url = "2.5.4"

[dev-dependencies]
env_logger = "0.11.8"
mockito = "1.7.0"
